@@ -23,6 +23,7 @@
 - @out_format in vips_system() can contain [options]
 - webpsave_buffer no longer ignores @lossless, thanks aaron42net
 - float tiff tagged as scRGB to match photoshop convention, thanks Murat
+- better jpeg autorot, thanks otto
 
 24/3/16 started 8.2.4
 - fix nohalo and vsqbs interpolators, thanks Rafael
